ansible_init/files/iptables/iptables-intra-f
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.

# nat tables
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
# routing
-A POSTROUTING -o em2 -j MASQUERADE
COMMIT

# filter tables
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
## ACCEPT icmp lo and ESTABLISHED
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

## 开放VPN网段访问
-A INPUT -s 113.247.251.0/24,42.48.30.87/32,218.76.45.100/32 -j ACCEPT
## 开放办公网段访问
-A INPUT -s 61.187.53.128/25,222.247.56.8/29 -j ACCEPT
## 开放内网网段访问
-A INPUT -s 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16 -j ACCEPT

## DROP ALL
-A INPUT -j DROP
#-A INPUT -j REJECT --reject-with icmp-host-prohibited
#-A FORWARD -j REJECT --reject-with icmp-host-prohibited

## FORWARD em1
-A FORWARD -i em1 -j ACCEPT
COMMIT
